overlapping bugs fixed

--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ section {
   background-position: center;
   height: 70vh;
   min-height: 400px;
-  width: 99vw;
 }
 
 #Home .btn {
@@ -77,7 +76,7 @@ ul {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 
 ::-webkit-scrollbar-track {
